fix: cleanup